@@ -12,6 +12,9 @@ What's New in Python 3.0.2?
 Core and Builtins
 -----------------
 
+- Issue #6334: Fix bug in range length calculation for ranges with
+  large arguments.
+
 - Fixed SystemError triggered by "range([], 1, -1)".
 
 - Issue #5924: On Windows, a large PYTHONPATH environment variable
